--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         ports:
             - 3000:3000
         networks:
-            - nginx-proxy-menager_default
+            - default
             - evpanel_default
 
     evpanel-backend:
@@ -23,11 +23,9 @@ services:
         ports:
             - 5000:5000
         networks:
-            - nginx-proxy-menager_default
+            - default
             - evpanel_default
 
 
 networks:
-    nginx-proxy-menager_default:
-        external: true
     evpanel_default:
