--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,6 +1,15 @@
-name: Lint
+name: Black
+on:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
+    paths:
+      - Dockerfile
+      - backend/**
 
-on: [push, pull_request]
+permissions: read-all
 
 jobs:
   lint:
@@ -16,3 +25,5 @@ jobs:
         uses: psf/black@stable
         with:
           version: ${{ env.BLACK_VERSION }}
+
+
