--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 permissions: read-all
 
 jobs:
-  lint:
+  black:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
