--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ Flask~=2.2.2
 Flask-Cors~=3.0.10
 Flask-JWT-Extended~=4.4.4
 Flask-SQLAlchemy~=3.0.3
-Fkask-Mail~=0.9.1
+Flask-Mail~=0.9.1
 Gunicorn~=20.1.0
 Bcrypt~=4.0.1
+Black~=23.1.0
 
