--- a/backend/requirements_dev.txt
+++ b/backend/requirements_dev.txt
@@ -1,7 +1,10 @@
+Python-dotenv~=0.21.1
 Flask~=2.2.2
 Flask-Cors~=3.0.10
-Flask-JWT-Extended~=4.3.0
+Flask-JWT-Extended~=4.4.4
 Flask-SQLAlchemy~=3.0.3
+Flask-Mail~=0.9.1
 Gunicorn~=20.1.0
-Python-dotenv~=0.21.1
+Bcrypt~=4.0.1
+Black~=23.1.0
 
