--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -9,7 +9,12 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+      - name: get black version
+        run: |
+          export VERSION=$(grep -Po 'black==\K.*' requirements_dev.txt)
+          echo "BLACK_VERSION=$VERSION" >> $GITHUB_ENV
       - name: run black
         uses: psf/black@stable
         with:
-          src: "./backend/auth.py"
+          version: ${{ env.BLACK_VERSION }}
+          src: "./backend"
