--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@heroicons/react": "^2.0.14",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.3.2",
+    "i18next": "^22.4.10",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.1.1",
+    "react-router-dom": "^6.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
-    "react-router-dom": "^6.8.0",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4",
     "use-local-storage": "^2.3.6"
