--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,5 +1,11 @@
 name: Black
-on: [push, pull_request]
+on: 
+  push:
+    branches:
+      - dev
+  pull_request:
+    branches:
+      - dev
 
 permissions: read-all
 
