--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -2,10 +2,10 @@ name: Black
 on: 
   push:
     branches:
-      - dev
+      - master
   pull_request:
     branches:
-      - dev
+      - master
 
 permissions: read-all
 
@@ -23,4 +23,4 @@ jobs:
         uses: psf/black@stable
         with:
           version: ${{ env.BLACK_VERSION }}
-          src: "./backend2"
+          src: "./backend"
