--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,14 +12,16 @@ flask-cors = "^3.0.10"
 flask-jwt-extended = "^4.4.4"
 flask-sqlalchemy = "^3.0.3"
 flask-mail = "^0.9.1"
+flask-openapi3 = "^2.3.1"
+flask-wtf = "^1.1.1"
 gunicorn = "^20.1.0"
 bcrypt = "^4.0.1"
 python-dotenv = "^0.21.1"
-flask-wtf = "^1.1.1"
-mysql = "^0.0.3"
+pymysql = "^1.0.2"
 
 [tool.poetry.group.dev.dependencies]
 black = "^23.1.0"
+pytest = "^7.2.1"
 
 [build-system]
 requires = ["poetry-core"]
