--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -23,4 +23,4 @@ jobs:
         uses: psf/black@stable
         with:
           version: ${{ env.BLACK_VERSION }}
-          src: "./backend"
+          src: "./src"
