--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,12 +1,12 @@
 [tool.poetry]
-name = "evpanel"
+name = "backend"
 version = "0.1.0"
 description = ""
 authors = ["kamyrdol32 <kamyrdol32@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.11"
 flask = "^2.2.3"
 flask-cors = "^3.0.10"
 flask-jwt-extended = "^4.4.4"
@@ -18,10 +18,6 @@ gunicorn = "^20.1.0"
 bcrypt = "^4.0.1"
 python-dotenv = "^0.21.1"
 pymysql = "^1.0.2"
-
-[tool.poetry.group.dev.dependencies]
-black = "^23.1.0"
-pytest = "^7.2.1"
 
 [build-system]
 requires = ["poetry-core"]
