--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
         build:
             context: ./backend
             dockerfile: Dockerfile
-        container_name: evpanel-backend
+        container_name: evpanel-src
         restart: always
         ports:
             - 5000:5000
