--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -28,4 +28,4 @@ COPY . .
 EXPOSE 5000
 
 # Run app
-CMD ["gunicorn", "--bind", "0.0.0.0:5000", "__init__:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5000", "src.__init__:app"]
