--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
         ports:
             - 3000:3000
         networks:
-            - nginx_network
+            - bridge
 
     evpanel-backend:
         build:
@@ -22,8 +22,7 @@ services:
         ports:
             - 5000:5000
         networks:
-            - nginx_network
+            - bridge
 
 networks:
-    nginx_network:
-        external: true
+    bridge:
