--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@
 /frontend/*.njsproj
 /frontend/*.sln
 /frontend/*.sw?
-/frontend/src/Others/i18n.jsx
 /frontend/src/CSS/output.css
+/frontend/.env
 
 # Backend
 /backend/src/.env
