--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,4 +21,5 @@ jobs:
         script: |
           cd Projects/evpanel/
           git pull origin master
+          docker network create evpanel_default
           docker-compose up -d --build
