--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+    - name: Test
+      run: echo ${{secrets.HOST }}
     - name: Deploy code
       uses: appleboy/ssh-action@master
       with:
