--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
     - name: Test
-      run: echo ${{secrets.HOST }}
+      run: echo TEST ${{secrets.HOST }}
     - name: Deploy code
       uses: appleboy/ssh-action@master
       with:
