--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
           cd Projects/evpanel/
           git pull origin master
           docker network create evpanel_default
-          docker-compose up -d --build
+          docker compose up -d --build
