--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ gunicorn = "^20.1.0"
 bcrypt = "^4.0.1"
 python-dotenv = "^0.21.1"
 pymysql = "^1.0.2"
+flask-bcrypt = "^1.0.1"
 
 [build-system]
 requires = ["poetry-core"]
