--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -2,10 +2,7 @@ name: Black
 on: 
   push:
     branches:
-      - master
-  pull_request:
-    branches:
-      - master
+      - dev
 
 permissions: read-all
 
