--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    needs: black
     environment: deploy
     steps:
       - name: Checkout code
