--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
             context: ./frontend
             dockerfile: Dockerfile
         container_name: evpanel-frontend
+        env_file:
+            -   .env
         restart: always
         ports:
             - 3001:3001
@@ -16,6 +18,8 @@ services:
             context: ./backend
             dockerfile: Dockerfile
         container_name: evpanel-backend
+        env_file:
+            -   .env
         restart: always
         ports:
             - 5001:5001
