--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
             dockerfile: Dockerfile
         container_name: evpanel-frontend
         env_file:
-            -   frontend.env
+            - ./frontend/frontend.env
         restart: always
         ports:
             - 3001:3001
