Update 1.0.7 - CI/CD Update

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,16 @@ FROM python:3.11-alpine
 # Create app directory
 WORKDIR /backend
 
+# Environment variables
+ENV FLASK_APP=core.py
+ENV FLASK_RUN_HOST=0.0.0.0
+ENV FLASK_ENV=development
+ENV FLASK_DEBUG=1
+ENV FLASK_RUN_PORT=5001
+ENV POETRY_VERSION=1.4.0
+
 # System deps:
-RUN pip install --no-cache-dir "poetry==1.4.0"
+RUN pip install --no-cache-dir "poetry==$POETRY_VERSION"
 
 # Copy only requirements to cache them in docker layer
 COPY poetry.lock pyproject.toml ./
