--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,14 +1,16 @@
 name: CD
 
-on: [push]
+on: [ push ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     environment: deploy
     steps:
+      -
       - name: Checkout code
         uses: actions/checkout@v3
+
       - name: Deploy code
         uses: appleboy/ssh-action@master
         with:
@@ -20,3 +22,14 @@ jobs:
             cd Projects/evpanel/
             git pull origin master
             docker compose up -d --build
+
+      - name: Restart nginx
+        needs: deploy
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          script: |
+            docker restart nginx_proxy
