--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,8 +22,12 @@ jobs:
             git pull origin master
             docker compose up -d --build
 
-      - name: Restart nginx
-        needs: deploy
+  nginx_reload:
+    runs-on: ubuntu-latest
+    environment: deploy
+    needs: deploy
+    steps:
+      - name: Reload nginx
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST }}
