--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.5",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^6.8.1",
     "react-toastify": "^9.1.1",
     "tailwindcss": "^3.2.4",
