Update 1.0.8 Website monitor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,10 @@ services:
         restart: always
         ports:
             - 5001:5001
+        networks:
+          - my_network
+
+networks:
+    my_network:
+        driver: bridge
+
