--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         restart: always
         ports:
             - 3001:3001
+        networks:
+            - bridge
 
     evpanel-backend:
         build:
