Update 1.0.8 Website monitor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
         ports:
             - 3001:3001
         networks:
-            - evpanel-network
+            - evpanel_default
 
     evpanel-backend:
         build:
