Update 1.0.8 Website monitor

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         restart: always
         ports:
             - "3001:3001"
+        networks:
+            - evpanel_default
 
     evpanel-backend:
         build:
@@ -23,10 +25,11 @@ services:
         ports:
             - "5001:5001"
         networks:
+            - evpanel_default
             - portfolio_old_default
 
 networks:
     evpanel_default:
-        driver: bridge
+        driver: external
     portfolio_old_default:
-        external: true
+        driver: external
