--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,5 @@ services:
 
 networks:
     evpanel_default:
-        driver: external
+        driver: bridge
     portfolio_old_default:
-        driver: external
