--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,6 +19,6 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             cd Projects/evpanel/
-            git pull origin master
+            git pull origin main
             docker compose up -d --build
             docker restart nginx_proxy
