--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ bcrypt = "^4.0.1"
 pymysql = "^1.0.2"
 flask-bcrypt = "^1.0.1"
 requests = "^2.28.2"
+flask-apscheduler = "^1.12.4"
 
 [build-system]
 requires = ["poetry-core"]
