--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,23 @@ on:
 permissions: read-all
 
 jobs:
+  pytest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+      - name: setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+      - name: install dependencies
+        run: |
+          poetry config virtualenvs.create false
+          poetry install
+      - name: run pytest
+        run: |
+          pytest --cov=backend --cov-report=xml --cov-report=term-missing
+
   black:
     runs-on: ubuntu-latest
     steps:
