--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.11"
+python-dotenv = "^1.0.0"
 flask = "^2.2.3"
 flask-cors = "^3.0.10"
 flask-jwt-extended = "^4.4.4"
