Update 1.2.0 PyTest + Fixes

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -20,4 +20,4 @@ COPY . .
 EXPOSE 5001
 
 # Run app
-CMD ["gunicorn", "--bind", "0.0.0.0:5001", "src.__init__:app"]
+CMD ["gunicorn", "--bind", "0.0.0.0:5001", "src.__init__:create_app('Production')"]
