--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,6 +33,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.9
+      - name: Install Poetry
+        run: |
+          pip install poetry
       - name: Install dependencies
         run: |
           poetry install
