Update 1.2.1 PyTest + Fixes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -38,6 +38,7 @@ jobs:
           pip install poetry
       - name: Install dependencies
         run: |
+          cd backend
           poetry install
       - name: Test with pytest
         run: |
