Update 1.2.1 PyTest + Fixes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -42,4 +42,4 @@ jobs:
           poetry install
       - name: Test with pytest
         run: |
-          python3 -m pytest
+          python -m pytest
