Update 1.2.1 PyTest + Fixes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,4 +40,7 @@ jobs:
         run: |
           cd backend
           poetry install
-          poetry run pytest
+      - name: Test with pytest
+        run: |
+          cd ..
+          python -m pytest
