--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,16 +29,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+
       - name: Install Poetry
-        run: |
-          pip install poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
+
       - name: Install dependencies
         run: |
           cd backend
           poetry install
+
+      - name: Test with pytest
+        run: |
           cd ..
+          source .venv/bin/activate
           python -m pytest
