--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -31,6 +31,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Python 3.11
+        id: setup-python
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
@@ -43,7 +44,14 @@ jobs:
           virtualenvs-path: .venv
           installer-parallel: true
 
-      - name: Install dependencies
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v3
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Install project
         run: |
           cd backend
           poetry install --no-interaction
@@ -53,4 +61,5 @@ jobs:
           cd backend
           ls
           source .venv/bin/activate
-          python -m pytest
+          pytest tests/
+          coverage report
