--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -61,5 +61,4 @@ jobs:
           cd backend
           ls
           source .venv/bin/activate
-          pytest tests/
-          coverage report
+          pytest
