Update 1.2.1 PyTest + Fixes

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -60,5 +60,4 @@ jobs:
         run: |
           cd backend
           ls
-          source .venv/bin/activate
-          pytest
+          python -m pytest
