--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -41,7 +41,6 @@ jobs:
         with:
           virtualenvs-create: true
           virtualenvs-in-project: true
-          virtualenvs-path: .venv
           installer-parallel: true
 
       - name: Load cached venv
@@ -60,4 +59,5 @@ jobs:
         run: |
           cd backend
           ls
-          python -m pytest
+          source .venv/bin/activate
+          pytest
